feat: adding feature authenticate login register

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 MONGO = mongodb+srv://fernandsparxman:fernand23@nanreffblogs.x4fvnvv.mongodb.net/nanreffblogs?retryWrites=true&w=majority
+
+AUTH_SECRET = Lnd6iuY0kF9Rdo5B6MqPHalykwYa7WvpJ1Sw7qm14uk=
+AUTH_URL = http://localhost:3000/api/auth
+
+GITHUB_ID = 5b5cf067466a745e3bff
+GITHUB_SECRET = 7bd9be2efa63e6669122eeb4f0ebeea7a72906b5
